--- a/scatter_plot/styles/style.css
+++ b/scatter_plot/styles/style.css
@@ -4,3 +4,12 @@
   background-color: #f7f7f7;
   margin: 25px auto;
 }
+
+.x-axis path, .x-axis line {
+  shape-rendering: crispEdges;
+}
+
+.x-axis text {
+  font-family: sans-serif;
+  font-size: 16px;
+}
