--- a/scatter_plot/styles/style.sass
+++ b/scatter_plot/styles/style.sass
@@ -3,3 +3,12 @@
     height: 400px
     background-color: #f7f7f7
     margin: 25px auto
+
+.x-axis path, .x-axis line
+    shape-rendering: crispEdges
+
+.x-axis text 
+    font: 
+        family: sans-serif
+        size: 16px
+    
